--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -13,7 +13,11 @@ body:
         required: true
       - label: 我在提问题之前至少花费了 5 分钟来思考和准备
         required: true
-      - label: 我正在使用最新版的 FGO-py
+      - label: 我正在使用最新版的 FGO-ExpBall
+        required: false
+      - label: 这个问题出现了至少3次
+        required: false
+      - label: 我使用过旧版的 FGO-ExpBall 并且没有出现过这个问题
         required: false
   - type: textarea
     id: describe
@@ -48,6 +52,7 @@ body:
       description: |
         请复制并粘贴任何相关的日志输出。
         可以把文件拖入这个区域以添加日志文件。
+        日志文件在fgoLog目录下。
       render: Text
     validations:
       required: false
@@ -58,7 +63,7 @@ body:
       description: |
         如果有，添加屏幕截图以帮助解释你的问题。
         可以复制图片后在此区域内粘贴以添加图片。
-        对于游戏画面，需要提交由本项目创建的截图，如使用「检查截图」按钮。
+        对于游戏画面，需要提交由本项目创建的截图，如使用「screenshot」命令。
         如有必要，使用色块遮盖个人信息。
     validations:
       required: false
