--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,1 +1,2 @@
-custom: ["https://raw.githubusercontent.com/hgjazhgj/FGO-py/master/doc/alipay.png", "https://raw.githubusercontent.com/hgjazhgj/FGO-py/master/doc/wechat.png"]
+github: hgjazhgj
+patreon: hgjazhgj
